# nfs-th232-analysis

./: .gitignore  ALTO_memo.md  README.md  event build step.md  exogam2 tree branch reference.md  nfs data processing workflow summary.md  personal nfs modification record.md
nfs-th232-analysis-adne/: AnalysisADNE.C  AnalysisADNE.h  CMakeLists.txt  GUser.C  GUser.h  GUserLinkDef.h  Geometry_Clover_Exogam.h  LICENSE  LICENSE_NOTICE.md  List34Si.txt  List34SiMILL.txt  List36S.txt  List36Si.txt  List38Si.txt  ListCo60Erasmus  ListEu152Erasmus  ListPostCalib.txt  ListRun.txt  ListRun.txt.2022  ListRun.txt.2023  ListRun.txt.NFS  README.md  SpyAnalysisADNE.C  SpyAnalysisADNE.h  TCsI.cxx  TCsI.h  TCsIData.cxx  TCsIData.h  TCsIDataLinkDef.h  TCsILinkDef.h  TDetector.cxx  TDetector.h  TDetectorLinkDef.h  TEbyE.cxx  TEbyE.h  TEbyEData.cxx  TEbyEData.h  TEbyEDataLinkDef.h  TEbyELinkDef.h  TExogam.cxx  (+55 more)
nfs-th232-analysis-adne/CalFile/: Vamos_EXOGAM_calib_params_cri.txt  Vamos_EXOGAM_calib_params_seg.txt  ecc.cal  ecc.cal.G1.2025  ecc.cal.e737  ecc.cal.e851_2024_G1  ecc.cal.e900.G1.2026  ecc.cal.lise2024  ecc.cal.save  generic.cal  gocce.cal  gocce.cal.G1.2025  gocce.cal.e851_2024_G1  gocce.cal.lise2024  gocce.cal.nfs.e838  gocce_phi_offset.cal  mw.cal  nwall.cal  paris.cal  tac.cal
nfs-th232-analysis-adne/Conf/: ACTIONS_test.CHC_PAR.run_0115.dat.08-04-22_16h00m27s  ACTIONS_test.CHC_PAR.run_0146.dat.25-04-22_10h53m04s  ACTIONS_test.CHC_PAR.run_0221.dat.13-05-22_14h42m32s  ACTIONS_vamos_agata.CHC_PAR  Diamant_in_Tree.cfg  DiamatAngles.txt  Exogam2_in_Tree.cfg.2023Commiss  Exogam2_in_Tree.cfg.before25April2022  Exogam2_in_Tree.cfg.e805  Exogam2_in_Tree.cfg.e823  Exogam2_in_Tree.cfg.e843  Exogam2_in_Tree.cfg.e849  Exogam2_in_Tree.cfg.e900.G1.2026  Exogam2_in_Tree.cfg.lise2024  Exogam2_in_Tree.cfg.lise2025  Exogam2_in_Tree.cfg.lise2026  Exogam2_in_Tree.cfg.nfs.2022  Exogam2_in_Tree.cfg.nfs.2023.part1  Exogam2_in_Tree.cfg.nfs.2023.part2  Generic_in_Tree.cfg  ListOfGammaGammaMatrices.conf  ListOfGammaGammaMatrices_perhaps_later.conf  Neda_in_Tree.cfg  Paris_in_Tree.cfg  TopologyManagerExogam.py  VamosIC_in_Tree.cfg  dssd.conf
nfs-th232-analysis-adne/CutDiamant/: displayCuts.c  writeCuts.c
nfs-th232-analysis-adne/CutNWall/: how_many_nw_dets_in_between  ns_dt.limits
nfs-th232-analysis-adne/Utils/: Autocal_NFS_CrystalEnergy.C
nfs-th232-analysis-adne/Yaml_config_files/: config.yaml
nfs-th232-analysis-adne/lsy_nfs/: MFM_raw_merged_structure_CN.md  README.md  ags_2plus_gated_gamma_gamma_calibrated.C  analyze_raw_exo_gamma_timing_spectrum.C  batch_calibrate_nfs_crystals.sh  calibrate_nfs_crystal_energy_time.C  calibrate_nfs_crystals.sh  draw_crystal_inner6m_vs_ftime.C  draw_raw_timestamp_axis.C  draw_unmerged_mfm_ts_distribution.C  extract_nfs_energy_peaks.C  fission_event_ana.C  fission_event_ana_calibrated.C  fit_nfs_deltaT_gamma_flash.C  fit_nfs_standard_time_reference.C  list_nfs_run_roots.sh  make_co60_crystal_energy_hists.C  merge_adne_parallel_outputs.py  merge_nfs_veto_addback_to_spe.py  mfm_to_raw_event_tree.C  (+13 more)
(+38 files in other folders)
